implement friends-list with search-bar
