# src/app/models/Wish.ts
@@ -1,18 +1,24 @@
 export class Wish {
   description: string;
+  title: string;
+  occasion: string;
   _id: string;
 
   constructor(wish?: {
-    description?: string
+    description?: string,
+    title?: string,
+    occasion?: string,
   }) {
     this.description = wish.description || '';
+    this.title = wish.title || '';
+    this.occasion = wish.occasion || '';
   }
 
   toString() {
-    return this.description;
+    return `${this.title}, ${this.description}`;
   }
 
   valueOf() {
-    return this.description;
+    return `${this.title}, ${this.description}`;
   }
 }
